# KaiRust

./: .gitignore  CLAUDE.md  Caddyfile  Caddyfile.local  README.md  docker-compose.local.yml  docker-compose.yml  run-local.sh  test.html  test_cargo_copy.sh  ui-detail.html  ui-styles.html  visualizer.html
backend/: Cargo.toml  Dockerfile
backend/data/: kairust.db
backend/src/: auth.rs  db.rs  executor.rs  main.rs  models.rs  router.rs  ws.rs
backend/src/exercises/: ch02_04_ex.rs  ch03_01_ex.rs  ch03_03_ex.rs  ch03_05_ex.rs  mod.rs
backend/src/exercises/ch01/: ch01_01.rs  ch01_02.rs  ch01_03.rs  ch01_04.rs  ch01_04_01.rs  ch01_04_02.rs  ch01_04_03.rs  ch01_04_04.rs  ch01_04_05.rs  mod.rs
backend/src/exercises/ch02/: ch02_01.rs  ch02_01_ex.rs  ch02_02.rs  ch02_03.rs  ch02_04.rs  ch02_05.rs  ch02_05_ex.rs  ch02_07_ex.rs  mod.rs
backend/src/exercises/ch03/: ch03_01.rs  ch03_01_ex.rs  ch03_01_ex2.rs  ch03_01_ex3.rs  ch03_02.rs  ch03_02_ex.rs  ch03_02_ex2.rs  ch03_02_ex3.rs  ch03_03.rs  ch03_03_ex.rs  ch03_03_ex2.rs  ch03_04.rs  ch03_05.rs  ch03_05_ex.rs  ch03_05_ex2.rs  ch03_05_ex3.rs  ch03_05_ex4.rs  ch03_05_ex5.rs  ch03_05_ex6.rs  ch03_05_ex7.rs  ch03_05_ex8.rs  mod.rs
backend/src/exercises/ch04/: ch04_01.rs  ch04_01_ex1.rs  ch04_01_ex2.rs  ch04_02.rs  ch04_03.rs  mod.rs
backend/src/exercises/ch05/: README.md  ch05_01.rs  ch05_01_ex.rs  ch05_02.rs  ch05_02_ex.rs  ch05_03.rs  ch05_03_ex.rs  ch05_04_ex.rs  ch05_05_ex.rs  ch05_06_ex.rs  ch05_07_ex.rs  (+4 more)
backend/src/handlers/: achievements.rs  admin.rs  code.rs  executor.rs  mod.rs  progress.rs  ws.rs  ws_play.rs
(+757 files in other folders)
