[package]
name = "kairust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
chrono = "0.4"

# Auth dependencies
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = "0.5"
jsonwebtoken = "9"
once_cell = "1.19"
rand = "0.8"
sha2 = "0.10"

# Suppress warnings for exercise files
[lints.rust]
unused = "allow"
irrefutable_let_patterns = "allow"
unconditional_recursion = "allow"

[profile.release]
opt-level = "z"
lto = true
